fixed contact text not wrapping propperly

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -683,8 +683,24 @@ p {
   top: 0px;
 }
 
+.left-3 {
+  left: 0.75rem;
+}
+
+.left-6 {
+  left: 1.5rem;
+}
+
+.left-10 {
+  left: 2.5rem;
+}
+
 .-z-10 {
   z-index: -10;
+}
+
+.m-auto {
+  margin: auto;
 }
 
 .mx-spacing {
@@ -745,12 +761,24 @@ p {
   margin-top: 20rem;
 }
 
+.ml-\[-0\.5em\] {
+  margin-left: -0.5em;
+}
+
+.ml-\[-0\.3em\] {
+  margin-left: -0.3em;
+}
+
 .block {
   display: block;
 }
 
 .inline-block {
   display: inline-block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -761,8 +789,8 @@ p {
   display: none;
 }
 
-.h-14 {
-  height: 3.5rem;
+.h-12 {
+  height: 3rem;
 }
 
 .h-16 {
@@ -775,6 +803,10 @@ p {
 
 .h-4 {
   height: 1rem;
+}
+
+.h-6 {
+  height: 1.5rem;
 }
 
 .h-8 {
@@ -802,18 +834,6 @@ p {
   height: 100%;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
-.h-5 {
-  height: 1.25rem;
-}
-
-.h-6 {
-  height: 1.5rem;
-}
-
 .min-h-\[120px\] {
   min-height: 120px;
 }
@@ -822,8 +842,8 @@ p {
   min-height: 100vh;
 }
 
-.w-14 {
-  width: 3.5rem;
+.w-12 {
+  width: 3rem;
 }
 
 .w-4 {
@@ -849,10 +869,6 @@ p {
 
 .w-full {
   width: 100%;
-}
-
-.w-12 {
-  width: 3rem;
 }
 
 .max-w-\[430px\] {
@@ -889,6 +905,10 @@ p {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-start {
   align-items: flex-start;
 }
@@ -897,12 +917,20 @@ p {
   align-items: center;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-center {
   justify-content: center;
 }
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-0 {
+  gap: 0px;
 }
 
 .gap-x-20 {
@@ -941,6 +969,10 @@ p {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 
 .rounded {
@@ -1064,10 +1096,6 @@ p {
   padding: 1.75rem;
 }
 
-.p-12 {
-  padding: 3rem;
-}
-
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -1167,10 +1195,6 @@ p {
 
 .duration-300 {
   transition-duration: 300ms;
-}
-
-.duration-500 {
-  transition-duration: 500ms;
 }
 
 .duration-700 {
